@@ -7,6 +7,9 @@ pkgcore 0.3.2:
 
 * Stop installing pregen symlink; functionality moved to pmaint regen.
 
+* 'pmerge --domain' was added; basically is a way to specify the domain to
+  use, else usees the configuration defined default domain.
+
 
 pkgcore 0.3.1:
 
